implements api call in javascript, uses java to execute javascript on browser object

--- a/src/maps/client.html
+++ b/src/maps/client.html
@@ -2,17 +2,50 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="initial-scale1.0">
+    <meta charset="utf-8">
     <title>Google Maps</title>
+    <style>
+        #map {
+            height: 100%;
+        }
+        html, body {
+            height: 80%;
+            margin: 0;
+            padding: 0;
+        }
+    </style>
+<!--
     <script type="text/javascript" src="client.js"></script>
+-->
+<!--
     <link href="styles.css" rel="stylesheet">
-    <script>
-        Client.start();
-    </script>
+-->
+
+    <!-- bootstrap and jquery -->
+    <!--<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+-->
+    <!--<script>
+        var map;
+        function initMap() {
+            map = new google.maps.Map(document.getElementById('map'), {
+                center: {lat: -34.397, lng: 150.644},
+                zoom: 8
+            });
+        }
+    </script>-->
 </head>
 <body>
-    <h1>TEST</h1>
-
-    <h2>SECOND TEST</h2>
-
+    <div id="map"></div>
+    <!--<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD3Jb1jp2-D5Xi0kfEL5jEATK4c34nUDCY&callback=Client.start"
+            async defer>
+    </script>
+    <script>
+        alert("alert");
+    </script>-->
+    <script src="client.js" defer></script>
 </body>
 </html>
